[package]
name = "rimger"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "a simple image viewer"
repository = "https://github.com/wdv4758h/rimger/"
keywords = ["image", "viewer"]

[dependencies]
clap = { version = "2.9.1", features = ["yaml"] }
conrod = "0.37.1"
find_folder = "0.3.0"
piston_window = "0.50.0"

[profile.release]
lto = true
