[package]
name = "rimger"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
license = "AGPL-3.0"
readme = "README.rst"
description = "a simple image viewer"
repository = "https://github.com/wdv4758h/rimger/"
keywords = ["image", "viewer"]

[dependencies]
clap = { version = "2.27.1", features = ["yaml"] }
conrod = { version = "0.56.0", features = ["winit", "glium"] }
image = "0.17.0"

[profile.release]
lto = true
